# Deep-Learning-practice

./: .gitignore  .project-root  README.md  main.py  pyproject.toml  train.py
configs/callbacks/: default.yaml  prediction.yaml
configs/data/: covid.yaml
configs/experiment/: COVID-19Prediction.yaml  example.yaml
configs/model/: regression.yaml
configs/paths/: default.yaml
scripts/: schedule.sh
src/: eval.py  prediction.py  train.py
src/data/: covid_datamodule.py
src/models/: regression_module.py
src/models/components/: simple_dense_net.py
src/utils/: rich_utils.py  utils.py
