[project]
name = "deep-learning-practice"
version = "0.1.0"
description = "A comprehensive framework for Deep Learning research using PyTorch and Lightning."
authors = [
    { name = "肖程哲"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "torchviz",
    "timm",
    "lightning",
    "numpy",
    "scikit-learn",
    "pyyaml",
    "hydra-core",
    "omegaconf",
    "tensorboard",
    

]

# ==============================================================================
# 可选依赖 (按需安装)
# ==============================================================================
[project.optional-dependencies]
# --- 按算法或研究主题划分的可选包 ---
# 使用方法: pip install -e .[<group_name>]
# 例如，要安装Transformer和XAI相关的库: pip install -e .[transformer,xai]

transformer = [
    "transformers",
    "datasets",
]

xai = [
    "captum",
]

attack = [
    "foolbox",
    "adversarial-robustness-toolbox", # for ART
]

compression = [
    "torch-pruning",
]

adaptation = [
    "pytorch-adapt",
]

# meta = [
#     "learn2learn",
# ]

# --- 用于实验跟踪的额外工具 ---
tracking = [
    "wandb",
]

[dependency-groups]
dev = [
    "ipykernel",
    "ipywidgets",
    "jupyter",
    "kaggle",
]
