[project]
name = "deep-learning-practice"
version = "0.1.0"
description = "A comprehensive framework for Deep Learning research using PyTorch and Lightning."
authors = [
    { name = "肖程哲"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn",
    "pyyaml",
    
    "torch",
    "torchvision",
    "torchviz",
    "timm",
    "lightning",
    "torchmetrics",
    "tensorboard",

    "hydra-core",
    "omegaconf",
    "hydra-colorlog",
    "hydra-optuna-sweeper",
]



[dependency-groups]
dev = [
    "ipykernel",
    "ipywidgets",
    "jupyter",
    "kaggle",
    "rich",
    "rootutils",
    "pytest",
    "pre-commit",
]

